--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon functions/index.js",
-    "start": "nodemon functions/index.js"
+    "dev": "nodemon functions/api.js",
+    "start": "nodemon functions/api.js"
   },
   "repository": {
     "type": "git",
